mongo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mongo-express-ingress
  namespace: my-namespace

spec:
  ingressClassName: nginx

  rules:
    - host: mongo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
